--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <img src="../img/subsaharan-logo.png" alt="subsaharan" class="logo">
+    <img src="../../img/subsaharan-logo.png" alt="subsaharan" class="logo">
     <div class="tag-bg">
       <div class="tagline-img">
-        <img src="../img/unique-gift.png" alt="Find your unique gift">
+        <img src="../../img/unique-gift.png" alt="Find your unique gift">
       </div>
     </div>
     <a href="https://www.etsy.com/shop/MankaGifts" class="btn" target="_blank">
