--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
   <div class="container">
-    <img src="../../../img/subsaharan-logo.png" alt="subsaharan" class="logo">
+    <img src="/img/subsaharan-logo.png" alt="subsaharan" class="logo">
     <div class="tag-bg">
       <div class="tagline-img">
-        <img src="../../../img/unique-gift.png" alt="Find your unique gift">
+        <img src="/img/unique-gift.png" alt="Find your unique gift">
       </div>
     </div>
     <a href="https://www.etsy.com/shop/MankaGifts" class="btn" target="_blank">
       <span class="btn-text">Shop khanga & more...</span>
       <span>
-        <img src="../../../img/shop-cart-orange.png" alt="shop Khanga and more" class="btn-icon">
+        <img src="/img/shop-cart-orange.png" alt="shop Khanga and more" class="btn-icon">
       </span>
     </a>
 
