--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="p:domain_verify" content="ea588cd791425092d263cb458fecb7ce"/>
   <title>Welcome to Sub Saharan</title>
   <link rel="stylesheet" href="subsaharan.css">
 </head>
